--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -174,8 +174,8 @@ abbr[data-bs-original-title] {
 .slide-inner {
   position: relative;
   overflow: hidden;
-  width: 100%;
-  height: calc( 300px + 3em);
+  width: auto;
+  height: auto;
 }
 .slide-open:checked + .slide-item {
   position: static;
@@ -190,7 +190,7 @@ abbr[data-bs-original-title] {
 .slide-item img {
   display: block;
   height: auto;
-  max-width: 100%;
+  width: auto;
 }
 .slide-control {
   background: rgba(0, 0, 0, 0.28);
@@ -11401,7 +11401,44 @@ header {
   padding-bottom: 6rem;
 }
 
+body{
+  background-color: #white;
+  font-family:Georgia, 'Times New Roman', Times, serif;
+}
+
+#main-container{
+  margin: 150px auto;
+  width: 600px;
+}
+
 section {
   padding-top: 9rem;
   padding-bottom: 9rem;
 }
+
+table{
+  background-color: white;
+  text-align: left;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th,td{
+  padding: 20px;
+}
+
+thead{
+  background-color: #7DB566;
+  border-bottom: solid 5px #4D7E3C;
+  color: white;
+}
+
+tr:nth-child(even){
+  background-color: #ddd;
+}
+
+tr:hover td{
+  background-color: #34ADBE;
+  color: white;
+}
+
